# pybindcef

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
cef_worker/: CMakeLists.txt  cef_worker.cpp
pybindcef/: __init__.py
src/: bridge.cpp  bridge.h  main_app.cpp  main_app.h  main_client.cpp  main_client.h  platform_utils.h
src/common/: gpu_mapper.h  identifiers.h
src/handlers/: download_handler.cpp  lifespan_handler.cpp  render_handler.cpp
src/handlers/include/: download_handler.h  lifespan_handler.h  render_handler.h
tests/kivy/: cef_worker  main.py  pybindcef.cp313-win_amd64.pyd  test.py
tests/kivy/Resources/: chrome_100_percent.pak  chrome_200_percent.pak
tests/kivy/Resources/locales/: af.pak  am.pak  ar.pak  bg.pak  bn.pak  ca.pak  cs.pak  da.pak  de.pak  el.pak  en-GB.pak  en-US.pak  es-419.pak  es.pak  et.pak  fa.pak  fi.pak  fil.pak  fr.pak  gu.pak  he.pak  hi.pak  hr.pak  hu.pak  id.pak  it.pak  ja.pak  kn.pak  ko.pak  lt.pak  lv.pak  ml.pak  mr.pak  ms.pak  nb.pak  nl.pak  pl.pak  pt-BR.pak  pt-PT.pak  ro.pak  (+15 more)
tests/kivy/Resources/web_cache/: Local State  first_party_sets.db-journal
tests/kivy/Resources/web_cache/Default/: BrowsingTopicsState  Cookies  DIPS  Favicons  History  Network Persistent State  Preferences  Reporting and NEL  Top Sites  TransportSecurity  Web Data
tests/kivy/Resources/web_cache/Default/Cache/Cache_Data/: 02322ee638ee99c2_0  02dbe14d536519b3_0  03b66acca59b63f4_0  0a35178eaa3d5b66_0  0b623f32247e72ed_0  0baee8e0bcfcfc33_0  0da61bbeb4b8725c_0  0dac44c3c01ed659_0  0faca603b9c81ec0_0  106cf032effc37ba_0  1171bd0224373895_0  131f3376bfce25c0_0  14275dfabf204141_0  156b1dfac49c6ee6_0  163f1ba37df96693_0  1798cf50b5e1bd98_0  183b11d5a8075d57_0  1d5c1a5a8e44e3f6_0  1e2df49a8a772729_0  1fa79d62f14c1256_0  21eb7812c4a5ee9e_0  242fc0bffbc6294e_0  2ace4982a6f3ee3f_0  2b9cf3cc973c6faa_0  2ba9963c2ac22fb3_0  2c1a94a3f09b300a_0  2c4e5f8fa5a3b9ec_0  2c9e314e82a311ac_0  2d73fc3d5f7d73cb_0  2e5ad6a7c67ddeab_0  2ef696700af1d057_0  3099f526fcbb5d86_0  332f7eb1c5ee747f_0  3375634eb79921ec_0  392d58c585e36332_0  3933743220aeccb2_0  3a1c491fdd4d6a9c_0  3ad52beff70f972c_0  3bd2cbf3b490bfba_0  3ea63b98bb73499a_0  (+133 more)
tests/kivy/Resources/web_cache/Default/Cache/Cache_Data/index-dir/: the-real-index
tests/kivy/Resources/web_cache/Default/Code Cache/js/: 02169bb8a1ffb62b_0  061440028d224c44_0  06c057d5dd57479b_0  0d87fc73a9306cf6_0  0f7a4b94b926ff38_0  0fe0d28f4a8ca3b2_0  11469876ca057771_0  116e291a102141d4_0  14bd1012e4539a23_0  156d0cb3ef576f4d_0  177ea8b1272d810d_0  197c5a9eca3a1a5c_0  1b6cba14d69fdd8d_0  1c95f55072680a27_0  1d1a727896d8dee3_0  2055931eb1a0b6c3_0  2165e404a776c252_0  231c09ce72e7bb0a_0  2559d2e078da409e_0  265d8875b824774a_0  269f33698173da54_0  2726317d60ce3e94_0  28393e815eb7f71a_0  284a795eb7222302_0  29592fc830631d5e_0  2a07fb26b204541c_0  2d24621e531583be_0  2ea51570480a55f1_0  339dd064f807e954_0  3caacf937f85775b_0  3e276dc1ed696781_0  442c8aedd3f06a89_0  480d4c76801b5f16_0  48bf6dc6ff84cb9d_0  4ce2cecd9bbee840_0  4d0875613d4b516d_0  4df2d650449b538f_0  537a20372897e295_0  5bd3b46a5da3ab78_0  5f5d5c55b78cdc43_0  (+67 more)
tests/kivy/Resources/web_cache/Default/Code Cache/js/index-dir/: the-real-index
tests/kivy/Resources/web_cache/Default/Code Cache/wasm/index-dir/: the-real-index
tests/kivy/Resources/web_cache/Default/DawnGraphiteCache/: index
tests/kivy/Resources/web_cache/Default/DawnWebGPUCache/: index
tests/kivy/Resources/web_cache/Default/Extension Rules/: LOG  LOG.old
tests/kivy/Resources/web_cache/Default/Extension Scripts/: LOG  LOG.old
tests/kivy/Resources/web_cache/Default/Extension State/: LOG  LOG.old
tests/kivy/Resources/web_cache/Default/GCM Store/Encryption/: LOG  LOG.old
tests/kivy/Resources/web_cache/Default/GPUCache/: index
tests/kivy/Resources/web_cache/Default/Local Storage/leveldb/: LOG  LOG.old
tests/kivy/Resources/web_cache/Default/Session Storage/: LOG  LOG.old
tests/kivy/Resources/web_cache/Default/Shared Dictionary/: db
tests/kivy/Resources/web_cache/Default/Shared Dictionary/cache/: 016542820d481073_0
tests/kivy/Resources/web_cache/Default/Shared Dictionary/cache/index-dir/: the-real-index
tests/kivy/Resources/web_cache/Default/Site Characteristics Database/: LOG  LOG.old
tests/kivy/Resources/web_cache/Default/Sync Data/LevelDB/: LOG  LOG.old
tests/kivy/Resources/web_cache/Default/shared_proto_db/: LOG  LOG.old
tests/kivy/Resources/web_cache/Default/shared_proto_db/metadata/: LOG  LOG.old
tests/kivy/Resources/web_cache/GrShaderCache/: data_1  index
tests/kivy/Resources/web_cache/GraphiteDawnCache/: data_1  index
tests/kivy/Resources/web_cache/ShaderCache/: data_1  index
tests/kivy/Resources/web_cache/segmentation_platform/: ukm_db
tests/kivy/linux/: cef_worker
tests/pyqt/: main.py
tests/tkinter/: main.py
